<resources>
    <string name="app_name">Project POC</string>
    <string name="please_enter_your_email">Please enter your email </string>
    <string name="email">EMAIL</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome</string>
    <string name="emailErrorMessage">Email field cannot be empty</string>
    <string name="invalidEmail">Email id is not valid.</string>
    <string name="emailNotFound">Email id not found.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">EMAIL:</string>
    <string name="name">NAME:</string>
    <string name="id">ID:</string>
    <string name="body">BODY:</string>
    <string name="title">TITLE:</string>
</resources>